# ISCN-parser

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
examples/: karyotype_samples.tsv  run_demo.sh
scripts/: download_cytobands.py
src/iscn_parser/: __init__.py  __main__.py  cli.py  converters.py  models.py  parser.py  reference.py
src/iscn_parser/data/: chromosomes_GRCh37.tsv  chromosomes_GRCh38.tsv
tests/: test_cli.py  test_converters.py  test_cytoband.py  test_parser.py  test_reference.py
tests/data/: array_samples.tsv  cytoBand_test.txt  malformed_samples.tsv
